Fix text-overflow

--- a/markup/css/menu_style.css
+++ b/markup/css/menu_style.css
@@ -5,7 +5,6 @@
 header {
     width: 100%;
     height: 70px;
-    /*background: #FF8BBA;*/
     position: fixed;
     top: 0;
     overflow: hidden;
@@ -98,7 +97,6 @@ body {
 }
 
 .tag {
-    /*margin-top: 40px;*/
     justify-content: flex-start;
     display: flex;
     flex-direction: row;
@@ -120,12 +118,13 @@ body {
 .note_tag {
     border: 1px solid;
     flex-basis: 250px;
-    /*width: 250px;*/
+    width: 250px;
     max-height: 290px;
-    /*height: 270px;*/
     min-height: 270px;
     margin-right: 30px;
     margin-top: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .note_tag:first-child {
@@ -156,8 +155,6 @@ body {
 }
 
 .ex_note {
-    overflow: hidden;
-    text-overflow: ellipsis;
     font-size: 20px;
 }
 
